feat(repo): add postgres support

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,14 @@
 services:
   db:
-    image: qdrant/qdrant:dev
+    image: pgvector/pgvector:pg18
     ports:
-      - "6333:6333"
+      - "${POSTGRES_PORT:-5432}:5432"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-pg}
+      POSTGRES_DB: ${POSTGRES_DB:-cs419_db}
+
+volumes:
+  pg_data:
