--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "llama-index>=0.14.5",
     "nbconvert>=7.16.6",
     "nltk>=3.9.2",
+    "psycopg[binary]>=3.2.12",
+    "pgvector>=0.4.1",
     "pydantic>=2.12.3",
     "python-dotenv>=1.1.1",
     "qdrant-client>=1.15.1",
