feat: change the speech 2 text model from original whisper -> faster whisper

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,4 +24,5 @@ dependencies = [
     "yt-dlp>=2025.11.12",
     "openai-whisper>=20250625",
     "protobuf>=6.33.1",
+    "faster-whisper>=1.2.1",
 ]
